# py-texttv

./: Makefile  pyproject.toml
.github/workflows/: create_prerelease.yml
src/py_texttv/: data_fetcher.py  main.py  page.py
