[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "py-texttv"
version = "0.2.1"
requires-python = ">=3.10"
dependencies = [
  "blessed>=1.23.0",
  "pydantic>=2.12.4",
  "rich>=14.2.0",
  "colorama>=0.4.6",
  "requests>=2.32.5",
]

[project.scripts]
py-texttv = "py_texttv.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
